--- a/src/main/res/layout-large/content_profile.xml
+++ b/src/main/res/layout-large/content_profile.xml
@@ -86,7 +86,7 @@
                     android:layout_column="1"
                     android:gravity="right"/>
                 <EditText
-                    android:id="@+id/edProfileDOB"
+                    android:id="@+id/etProfileDOB"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_column="2"
@@ -104,7 +104,7 @@
                     android:layout_column="1"
                     android:gravity="right"/>
                 <EditText
-                    android:id="@+id/edProfilePhone"
+                    android:id="@+id/etProfilePhone"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_column="2"
@@ -123,7 +123,7 @@
                     android:layout_column="1"
                     android:gravity="right"/>
                 <EditText
-                    android:id="@+id/edProfileAddress1"
+                    android:id="@+id/etProfileAddress1"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_column="2"
@@ -142,7 +142,7 @@
                     android:layout_column="1"
                     android:gravity="right"/>
                 <EditText
-                    android:id="@+id/edProfileAddress2"
+                    android:id="@+id/etProfileAddress2"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_column="2"
@@ -161,7 +161,7 @@
                     android:layout_column="1"
                     android:gravity="right"/>
                 <EditText
-                    android:id="@+id/edProfileCity"
+                    android:id="@+id/etProfileCity"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_column="2"
@@ -180,7 +180,7 @@
                     android:layout_column="1"
                     android:gravity="right"/>
                 <EditText
-                    android:id="@+id/edProfileState"
+                    android:id="@+id/etProfileState"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_column="2"
