--- a/src/main/res/layout-large/fragment_profile.xml
+++ b/src/main/res/layout-large/fragment_profile.xml
@@ -25,8 +25,8 @@
             android:layout_toEndOf="@+id/tvBloodGroup" />
 
         <ImageButton
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/ibProfile"
             android:src="@drawable/icon_blood_128"
             android:background="@drawable/profile_button"
@@ -75,7 +75,24 @@
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="10dp">
+                    <TextView
+                        android:textSize="25dp"
+                        android:text="Gender : "
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_column="1"
+                        android:gravity="right"/>
+                    <EditText
+                        android:id="@+id/etProfileGender"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="2"
+                        android:enabled="false"/>
+                </TableRow>
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -201,6 +218,7 @@
                         android:layout_height="wrap_content"
                         android:inputType="textMultiLine"
                         android:layout_column="2"
+                        android:text="Update"
                         android:layout_gravity="center"
                         android:visibility="invisible"/>
                 </TableRow>
