--- a/src/main/res/layout/fragment_profile.xml
+++ b/src/main/res/layout/fragment_profile.xml
@@ -21,8 +21,8 @@
             android:layout_toEndOf="@+id/tvBloodGroup" />
 
         <ImageButton
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/ibProfile"
             android:src="@drawable/icon_blood_64"
             android:background="@drawable/profile_button"
@@ -70,7 +70,23 @@
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="10dp">
+                    <TextView
+                        android:text="Gender : "
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_column="1"
+                        android:gravity="right"/>
+                    <EditText
+                        android:id="@+id/etProfileGender"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="2"
+                        android:enabled="false"/>
+                </TableRow>
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
