--- a/src/main/res/layout/fragment_profile.xml
+++ b/src/main/res/layout/fragment_profile.xml
@@ -109,6 +109,23 @@
                     android:layout_height="match_parent"
                     android:padding="10dp">
                     <TextView
+                        android:text="Weight : "
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_column="1"
+                        android:gravity="right"/>
+                    <EditText
+                        android:id="@+id/etProfileWeight"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_column="2"
+                        android:enabled="false"/>
+                </TableRow>
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="10dp">
+                    <TextView
                         android:text="Phone No : "
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
