--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -10,5 +10,8 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="FAB" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorAccent">#FFF</item>
+    </style>
 
 </resources>
